# ccnn

./: .gitignore  .ppath  CMakeLists.txt
lib/python/: util.cpp
src/: ccnn.py  config.py  dataset.py  demo.py  python_layers.py  train.py
